--- a/pom.xml
+++ b/pom.xml
@@ -26,7 +26,7 @@
                     <descriptorRefs>
                         <descriptorRef>jar-with-dependencies</descriptorRef>
                     </descriptorRefs>
-                    <outputDirectory>${basedir}</outputDirectory>
+                    <outputDirectory>${basedir}/application</outputDirectory>
                     <finalName>contact</finalName>
                     <appendAssemblyId>false</appendAssemblyId>
                     <archive>
